# Free_Motion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  SAFETY.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  demo.md  jetson-mapping.md  jetson-phase1.md  models.md  pi-benchmark.md  pi-camera.md  pi-closed-loop.md  pi-failure-modes.md  pi-hardware.md  pi-reference.md  pi-runtime.md  pi-setup.md  protocol.md
docs/issues/: file_issues.sh  m2-m3.md
docs/releases/: v0.2.0.md
examples/: local_sim_demo.py
examples/mock_drone/: README.md  mock_drone.py
examples/pi_bench_demo/: README.md  pi_bench_demo.py
examples/pi_camera_demo/: README.md  pi_camera_demo.py
examples/pi_closed_loop_demo/: README.md  pi_closed_loop_demo.py
examples/pi_follow_bench/: README.md  benchmark.py  pi_follow_bench.py
examples/pipe_check/: README.md  pipe_check.py
freemotion/: __init__.py
freemotion/agent/: __init__.py  agent.py  builtins.py  mission_loop.py
freemotion/config/: __init__.py  config.py
tests/: test_agent.py  test_builtins.py  test_config.py  test_local_sim_demo.py  test_mission_control.py  test_mission_gemma.py  test_mission_loop.py  test_mock.py  test_pi.py  test_pi_bench_demo.py  test_pi_camera_demo.py  test_pi_camera_source.py  test_pi_closed_loop_demo.py  test_pi_follow_bench.py  test_pipe_check.py  test_protocol.py  test_router.py  test_safety_gate.py  test_vision.py  test_vision_yolo.py  test_world.py
(+26 files in other folders)
